src/components/Report.css
#closeButton {
	float: right;
	position: -webkit-sticky;
	position: sticky;
	top: 22px;
	width: 40px;
	height: 40px;
	font-size: 18px;
	line-height: 40px !important;
}

#endgame-report {
	min-width: 300px;
	float: right;
	height: 90vh;
	overflow-y: auto;
	padding-right: 15px;
}

#endgame-report span, #report span {
	float: right;
}

#detailed-stats {
	width: 100%;
}

#endgame-report h1, #endgame-report h2, #endgame-report h3 {
	color: #eee;
}

#right-content {
	display:inline-block;
	background-color: var(--jd-gray);
	width: 300px;
	margin: 20px;
	vertical-align: top;
	padding-left: 20px;
	padding-right: 20px;
	max-height: 100%;
	overflow-y: auto;
}

#right-content:empty {
	display: none;
}

.report-stat {
	text-overflow: ellipsis;
    white-space: nowrap;
	overflow-x: hidden;
	margin-top: 10px;
	margin-bottom: 10px;
}

.report-stat span {
	max-width: 120px;
	text-overflow: ellipsis;
    white-space: nowrap;
	overflow-x: hidden;
}

